--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Registration</title>
+    <title>Banking Application - Customer Registration</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="form-container">
-            <h1>Banking Application</h1>
-            <h2>Customer Registration Form</h2>
+            <div class="header-nav">
+                <div>
+                    <h1>Banking Application</h1>
+                    <h2>Customer Registration Form</h2>
+                </div>
+                <a href="/customers" class="view-customers-link">View All Customers</a>
+            </div>
             
             <form id="customerForm">
                 <div class="form-group">
